fixed height for card on mobile

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -518,6 +518,11 @@ ul ion-icon {
     margin-top: 40px;
   }
 
+  #services img{
+    width: 100%;
+    height: 210px;
+  }
+
   .text-container {
     width: 100%;
     height: 100%;
@@ -556,20 +561,6 @@ ul ion-icon {
     box-shadow: none;
   }
 
-  .test {
-    display: none;
-    border: 0px;
-    box-shadow: none;
-  }
-
-  .test {
-    display: none;
-  }
-
-  #why-us-img {
-    width: 100%;
-  }
-
   #why-us p {
     width: 90%;
     margin: 0px 0px 20px;
@@ -594,10 +585,6 @@ ul ion-icon {
 
   .services-container {
     width: 100%;
-  }
-
-  .service-section {
-    width: 90%;
   }
 
   #why-us {
@@ -978,7 +965,7 @@ button[type="submit"] {
     color: #606060;
   }
 
-  #services img{
+  #services img.card-img-top {
     width: 100%;
     height: 210px;
   }
